[package]
name = "idvs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idvs"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.27", features = ["net", "signal"] }
rfd = "0.14"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
